# Thread-Pool

./: CMakeLists.txt  README.md
 docs/: 1-threadpool-v1.5-debug-notes.md  2-forward-capture.md
include/: ThreadPool.hpp
src/: ThreadPool.cpp  buggy-v1.5.cpp
test/: main.cpp  test-May17th2025  v1.0-test.cpp  v1.5-test  v1.5-test.cpp
tests/: performance_test.cpp  threadpool_full_test.cpp
tests_example_output/: perf.txt  test.txt
